lang/y.output
Useless nonterminals

   application


Terminals which are not used

   AND
   ASYNC
   IMPLEMENTS
   AMPERSAND
   UMINUS


Useless rules

  153 application: IDENTIFIER expr
  154            | application expr


Rules never reduced

   69 custom_binop: IDENTIFIER

   82 let_binding: LET '(' IDENTIFIER ')' '=' lambda_expr

   99 lambda_args: lambda_arg
  101            | lambda_args lambda_arg

  112 list_match_expr: IDENTIFIER DOUBLE_COLON IDENTIFIER

  135 type_args: IDENTIFIER


State 31 conflicts: 1 shift/reduce
State 39 conflicts: 30 shift/reduce
State 40 conflicts: 30 shift/reduce
State 41 conflicts: 3 shift/reduce, 1 reduce/reduce
State 42 conflicts: 1 shift/reduce
State 54 conflicts: 3 reduce/reduce
State 55 conflicts: 1 shift/reduce, 4 reduce/reduce
State 60 conflicts: 30 shift/reduce
State 65 conflicts: 1 shift/reduce, 2 reduce/reduce
State 68 conflicts: 30 shift/reduce
State 73 conflicts: 1 reduce/reduce
State 91 conflicts: 1 shift/reduce, 1 reduce/reduce
State 128 conflicts: 1 shift/reduce, 1 reduce/reduce
State 136 conflicts: 3 reduce/reduce
State 139 conflicts: 13 shift/reduce
State 179 conflicts: 14 shift/reduce
State 180 conflicts: 30 shift/reduce
State 181 conflicts: 14 shift/reduce
State 182 conflicts: 14 shift/reduce
State 183 conflicts: 14 shift/reduce
State 184 conflicts: 14 shift/reduce
State 185 conflicts: 14 shift/reduce
State 186 conflicts: 14 shift/reduce
State 187 conflicts: 14 shift/reduce
State 188 conflicts: 14 shift/reduce
State 189 conflicts: 14 shift/reduce
State 190 conflicts: 14 shift/reduce
State 191 conflicts: 14 shift/reduce
State 192 conflicts: 14 shift/reduce
State 193 conflicts: 14 shift/reduce
State 194 conflicts: 14 shift/reduce
State 196 conflicts: 14 shift/reduce
State 197 conflicts: 30 shift/reduce
State 198 conflicts: 1 shift/reduce
State 202 conflicts: 30 shift/reduce
State 203 conflicts: 5 reduce/reduce
State 204 conflicts: 3 shift/reduce
State 207 conflicts: 30 shift/reduce
State 208 conflicts: 30 shift/reduce
State 209 conflicts: 30 shift/reduce
State 213 conflicts: 4 reduce/reduce
State 214 conflicts: 30 shift/reduce
State 215 conflicts: 30 shift/reduce
State 223 conflicts: 2 shift/reduce
State 226 conflicts: 1 shift/reduce
State 227 conflicts: 2 shift/reduce
State 231 conflicts: 1 shift/reduce
State 232 conflicts: 1 shift/reduce
State 233 conflicts: 2 shift/reduce
State 234 conflicts: 1 shift/reduce
State 235 conflicts: 2 shift/reduce
State 245 conflicts: 31 shift/reduce
State 246 conflicts: 30 shift/reduce
State 252 conflicts: 30 shift/reduce
State 253 conflicts: 30 shift/reduce
State 255 conflicts: 13 shift/reduce
State 256 conflicts: 13 shift/reduce
State 258 conflicts: 2 shift/reduce
State 260 conflicts: 13 shift/reduce
State 286 conflicts: 1 shift/reduce, 2 reduce/reduce
State 288 conflicts: 30 shift/reduce
State 289 conflicts: 44 reduce/reduce
State 301 conflicts: 2 shift/reduce
State 303 conflicts: 2 shift/reduce
State 306 conflicts: 30 shift/reduce
State 308 conflicts: 44 reduce/reduce
State 309 conflicts: 44 reduce/reduce
State 310 conflicts: 30 shift/reduce
State 316 conflicts: 30 shift/reduce
State 323 conflicts: 30 shift/reduce
State 324 conflicts: 30 shift/reduce


Grammar

    0 $accept: program $end

    1 program: expr_sequence ';'
    2        | expr_sequence
    3        | /* empty */

    4 expr: simple_expr
    5     | 'yield' expr
    6     | expr DOUBLE_AT expr
    7     | expr simple_expr
    8     | expr '+' expr
    9     | expr '-' expr
   10     | expr '*' expr
   11     | expr '/' expr
   12     | expr MODULO expr
   13     | expr '<' expr
   14     | expr '>' expr
   15     | expr DOUBLE_AMP expr
   16     | expr DOUBLE_PIPE expr
   17     | expr GE expr
   18     | expr LE expr
   19     | expr NE expr
   20     | expr EQ expr
   21     | expr PIPE expr
   22     | expr ':' expr
   23     | expr 'to' expr
   24     | expr DOUBLE_COLON expr
   25     | let_binding
   26     | match_expr
   27     | type_decl
   28     | THUNK expr
   29     | TRIPLE_DOT expr
   30     | IDENTIFIER_LIST
   31     | MACRO_IDENTIFIER expr
   32     | 'for' IDENTIFIER '=' expr IN expr
   33     | expr '[' expr ']'
   34     | expr ':' '=' expr

   35 simple_expr: INTEGER
   36            | DOUBLE
   37            | FLOAT
   38            | TOK_STRING
   39            | TRUE
   40            | FALSE
   41            | IDENTIFIER
   42            | TOK_VOID
   43            | list
   44            | array
   45            | tuple
   46            | fstring
   47            | TOK_CHAR
   48            | '(' expr_sequence ')'
   49            | '(' FN lambda_args ARROW expr_sequence ')'
   50            | '(' FN TOK_VOID ARROW expr_sequence ')'
   51            | '(' '+' ')'
   52            | '(' '-' ')'
   53            | '(' '*' ')'
   54            | '(' '/' ')'
   55            | '(' MODULO ')'
   56            | '(' '<' ')'
   57            | '(' '>' ')'
   58            | '(' DOUBLE_AMP ')'
   59            | '(' DOUBLE_PIPE ')'
   60            | '(' GE ')'
   61            | '(' LE ')'
   62            | '(' NE ')'
   63            | '(' EQ ')'
   64            | '(' PIPE ')'
   65            | '(' ':' ')'
   66            | '(' DOUBLE_COLON ')'
   67            | '(' custom_binop ')'
   68            | simple_expr '.' IDENTIFIER

   69 custom_binop: IDENTIFIER

   70 expr_sequence: expr
   71              | expr_sequence ';' expr

   72 let_binding: LET TEST_ID '=' expr
   73            | LET IDENTIFIER '=' expr
   74            | LET IDENTIFIER '=' EXTERN FN fn_signature
   75            | LET lambda_arg '=' expr
   76            | LET MUT lambda_arg '=' expr
   77            | LET expr_list '=' expr
   78            | LET MUT expr_list '=' expr
   79            | LET TOK_VOID '=' expr
   80            | let_binding IN expr
   81            | lambda_expr
   82            | LET '(' IDENTIFIER ')' '=' lambda_expr
   83            | LET '(' IDENTIFIER ')' '=' expr
   84            | IMPORT PATH_IDENTIFIER
   85            | OPEN PATH_IDENTIFIER
   86            | IMPORT IDENTIFIER
   87            | OPEN IDENTIFIER
   88            | LET IDENTIFIER ':' IDENTIFIER '=' lambda_expr

   89 lambda_expr: FN lambda_args ARROW expr_sequence ';'
   90            | FN TOK_VOID ARROW expr_sequence ';'
   91            | '(' FN lambda_args ARROW expr_sequence ')'
   92            | '(' FN TOK_VOID ARROW expr_sequence ')'
   93            | MODULE lambda_args ARROW expr_sequence ';'
   94            | MODULE expr_sequence ';'

   95 lambda_args: lambda_arg
   96            | lambda_arg '=' expr
   97            | lambda_args lambda_arg
   98            | lambda_args lambda_arg '=' expr
   99            | lambda_arg
  100            | lambda_arg ':' '(' type_expr ')'
  101            | lambda_args lambda_arg
  102            | lambda_args lambda_arg ':' '(' type_expr ')'

  103 lambda_arg: IDENTIFIER
  104           | '(' expr_list ')'
  105           | list_match_expr

  106 list: '[' ']'
  107     | '[' expr_list ']'
  108     | '[' expr_list ',' ']'

  109 array: '[' '|' '|' ']'
  110      | '[' '|' expr_list '|' ']'
  111      | '[' '|' expr_list ',' '|' ']'

  112 list_match_expr: IDENTIFIER DOUBLE_COLON IDENTIFIER
  113                | IDENTIFIER DOUBLE_COLON expr

  114 tuple: '(' expr ')'
  115      | '(' expr_list ')'
  116      | '(' expr_list ',' ')'

  117 expr_list: expr
  118          | expr_list ',' expr

  119 match_expr: MATCH expr WITH match_branches
  120           | 'if' expr THEN expr ELSE expr
  121           | 'if' expr THEN expr

  122 match_test_clause: expr
  123                  | expr 'if' expr

  124 match_branches: '|' match_test_clause ARROW expr
  125               | match_branches '|' match_test_clause ARROW expr
  126               | match_branches '|' '_' ARROW expr

  127 fstring: FSTRING_START fstring_parts FSTRING_END

  128 fstring_parts: /* empty */
  129              | fstring_parts fstring_part

  130 fstring_part: FSTRING_TEXT
  131             | FSTRING_INTERP_START expr FSTRING_INTERP_END

  132 type_decl: TYPE IDENTIFIER '=' type_expr
  133          | TYPE IDENTIFIER
  134          | TYPE type_args '=' type_expr

  135 type_args: IDENTIFIER
  136          | type_args IDENTIFIER

  137 fn_signature: type_expr ARROW type_expr
  138             | fn_signature ARROW type_expr

  139 tuple_type: type_atom ',' type_atom
  140           | tuple_type ',' type_atom

  141 type_expr: type_atom
  142          | '|' type_atom
  143          | type_expr '|' type_atom
  144          | fn_signature
  145          | tuple_type

  146 type_atom: IDENTIFIER
  147          | IDENTIFIER '=' INTEGER
  148          | IDENTIFIER 'of' type_atom
  149          | IDENTIFIER ':' type_atom
  150          | '(' type_expr ')'
  151          | TOK_VOID
  152          | IDENTIFIER '.' IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    82 83 91 92 100 102 104 114 115 116 150
')' (41) 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    82 83 91 92 100 102 104 114 115 116 150
'*' (42) 10 53
'+' (43) 8 51
',' (44) 108 111 116 118 139 140
'-' (45) 9 52
'.' (46) 68 152
'/' (47) 11 54
':' (58) 22 34 65 88 100 102 149
';' (59) 1 71 89 90 93 94
'<' (60) 13 56
'=' (61) 32 34 72 73 74 75 76 77 78 79 82 83 88 96 98 132 134 147
'>' (62) 14 57
'[' (91) 33 106 107 108 109 110 111
']' (93) 33 106 107 108 109 110 111
'_' (95) 126
'for' (102) 32
'if' (105) 120 121 123
'of' (111) 148
'to' (116) 23
'yield' (121) 5
'|' (124) 109 110 111 124 125 126 142 143
error (256)
INTEGER (258) 35 147
DOUBLE (259) 36
FLOAT (260) 37
IDENTIFIER (261) 32 41 68 69 73 74 82 83 86 87 88 103 112 113 132 133
    135 136 146 147 148 149 152
MACRO_IDENTIFIER (262) 31
PATH_IDENTIFIER (263) 84 85
IDENTIFIER_LIST (264) 30
TOK_STRING (265) 38
TOK_CHAR (266) 47
TRUE (267) 39
FALSE (268) 40
PIPE (269) 21 64
EXTERN (270) 74
TRIPLE_DOT (271) 29
LET (272) 72 73 74 75 76 77 78 79 82 83 88
FN (273) 49 50 74 89 90 91 92
MODULE (274) 93 94
MATCH (275) 119
WITH (276) 119
ARROW (277) 49 50 89 90 91 92 93 124 125 126 137 138
DOUBLE_COLON (278) 24 66 112 113
TOK_VOID (279) 42 50 79 90 92 151
IN (280) 32 80
AND (281)
ASYNC (282)
DOUBLE_AT (283) 6
THUNK (284) 28
IMPORT (285) 84 86
OPEN (286) 85 87
IMPLEMENTS (287)
AMPERSAND (288)
TYPE (289) 132 133 134
TEST_ID (290) 72
MUT (291) 76 78
THEN (292) 120 121
ELSE (293) 120
FSTRING_START (294) 127
FSTRING_END (295) 127
FSTRING_INTERP_START (296) 131
FSTRING_INTERP_END (297) 131
FSTRING_TEXT (298) 130
APPLICATION (299)
DOUBLE_PIPE (300) 16 59
DOUBLE_AMP (301) 15 58
NE (302) 19 62
EQ (303) 20 63
LE (304) 18 61
GE (305) 17 60
MODULO (306) 12 55
UMINUS (307)


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
program (76)
    on left: 1 2 3, on right: 0
expr (77)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34, on right: 5 6 7 8 9 10 11 12
    13 14 15 16 17 18 19 20 21 22 23 24 28 29 31 32 33 34 70 71 72
    73 75 76 77 78 79 80 83 96 98 113 114 117 118 119 120 121 122 123
    124 125 126 131
simple_expr (78)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68,
    on right: 4 7 68
custom_binop (79)
    on left: 69, on right: 67
expr_sequence (80)
    on left: 70 71, on right: 1 2 48 49 50 71 89 90 91 92 93 94
let_binding (81)
    on left: 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88,
    on right: 25 80
lambda_expr (82)
    on left: 89 90 91 92 93 94, on right: 81 82 88
lambda_args (83)
    on left: 95 96 97 98 99 100 101 102, on right: 49 89 91 93 97 98
    101 102
lambda_arg (84)
    on left: 103 104 105, on right: 75 76 95 96 97 98 99 100 101 102
list (85)
    on left: 106 107 108, on right: 43
array (86)
    on left: 109 110 111, on right: 44
list_match_expr (87)
    on left: 112 113, on right: 105
tuple (88)
    on left: 114 115 116, on right: 45
expr_list (89)
    on left: 117 118, on right: 77 78 104 107 108 110 111 115 116 118
match_expr (90)
    on left: 119 120 121, on right: 26
match_test_clause (91)
    on left: 122 123, on right: 124 125
match_branches (92)
    on left: 124 125 126, on right: 119 125 126
fstring (93)
    on left: 127, on right: 46
fstring_parts (94)
    on left: 128 129, on right: 127 129
fstring_part (95)
    on left: 130 131, on right: 129
type_decl (96)
    on left: 132 133 134, on right: 27
type_args (97)
    on left: 135 136, on right: 134 136
fn_signature (98)
    on left: 137 138, on right: 74 138 144
tuple_type (99)
    on left: 139 140, on right: 140 145
type_expr (100)
    on left: 141 142 143 144 145, on right: 100 102 132 134 137 138
    143 150
type_atom (101)
    on left: 146 147 148 149 150 151 152, on right: 139 140 141 142
    143 148 149


state 0

    0 $accept: . program $end

    INTEGER           shift, and go to state 1
    DOUBLE            shift, and go to state 2
    FLOAT             shift, and go to state 3
    IDENTIFIER        shift, and go to state 4
    MACRO_IDENTIFIER  shift, and go to state 5
    IDENTIFIER_LIST   shift, and go to state 6
    TOK_STRING        shift, and go to state 7
    TOK_CHAR          shift, and go to state 8
    TRUE              shift, and go to state 9
    FALSE             shift, and go to state 10
    TRIPLE_DOT        shift, and go to state 11
    LET               shift, and go to state 12
    FN                shift, and go to state 13
    MODULE            shift, and go to state 14
    MATCH             shift, and go to state 15
    TOK_VOID          shift, and go to state 16
    THUNK             shift, and go to state 17
    IMPORT            shift, and go to state 18
    OPEN              shift, and go to state 19
    TYPE              shift, and go to state 20
    FSTRING_START     shift, and go to state 21
    'yield'           shift, and go to state 22
    'for'             shift, and go to state 23
    '['               shift, and go to state 24
    '('               shift, and go to state 25
    'if'              shift, and go to state 26

    $default  reduce using rule 3 (program)

    program        go to state 27
    expr           go to state 28
    simple_expr    go to state 29
    expr_sequence  go to state 30
    let_binding    go to state 31
    lambda_expr    go to state 32
    list           go to state 33
    array          go to state 34
    tuple          go to state 35
    match_expr     go to state 36
    fstring        go to state 37
    type_decl      go to state 38


state 1

   35 simple_expr: INTEGER .

    $default  reduce using rule 35 (simple_expr)


state 2

   36 simple_expr: DOUBLE .

    $default  reduce using rule 36 (simple_expr)


state 3

   37 simple_expr: FLOAT .

    $default  reduce using rule 37 (simple_expr)


state 4

   41 simple_expr: IDENTIFIER .

    $default  reduce using rule 41 (simple_expr)


state 5

   31 expr: MACRO_IDENTIFIER . expr

    INTEGER           shift, and go to state 1
    DOUBLE            shift, and go to state 2
    FLOAT             shift, and go to state 3
    IDENTIFIER        shift, and go to state 4
    MACRO_IDENTIFIER  shift, and go to state 5
    IDENTIFIER_LIST   shift, and go to state 6
    TOK_STRING        shift, and go to state 7
    TOK_CHAR          shift, and go to state 8
    TRUE              shift, and go to state 9
    FALSE             shift, and go to state 10
    TRIPLE_DOT        shift, and go to state 11
    LET               shift, and go to state 12
    FN                shift, and go to state 13
    MODULE            shift, and go to state 14
    MATCH             shift, and go to state 15
    TOK_VOID          shift, and go to state 16
    THUNK             shift, and go to state 17
    IMPORT            shift, and go to state 18
    OPEN              shift, and go to state 19
    TYPE              shift, and go to state 20
    FSTRING_START     shift, and go to state 21
    'yield'           shift, and go to state 22
    'for'             shift, and go to state 23
    '['               shift, and go to state 24
    '('               shift, and go to state 25
    'if'              shift, and go to state 26

    expr         go to state 39
    simple_expr  go to state 29
    let_binding  go to state 31
    lambda_expr  go to state 32
    list         go to state 33
    array        go to state 34
    tuple        go to state 35
    match_expr   go to state 36
    fstring      go to state 37
    type_decl    go to state 38


state 6

   30 expr: IDENTIFIER_LIST .

    $default  reduce using rule 30 (expr)


state 7

   38 simple_expr: TOK_STRING .

    $default  reduce using rule 38 (simple_expr)


state 8

   47 simple_expr: TOK_CHAR .

    $default  reduce using rule 47 (simple_expr)


state 9

   39 simple_expr: TRUE .

    $default  reduce using rule 39 (simple_expr)


state 10

   40 simple_expr: FALSE .

    $default  reduce using rule 40 (simple_expr)


state 11

   29 expr: TRIPLE_DOT . expr

    INTEGER           shift, and go to state 1
    DOUBLE            shift, and go to state 2
    FLOAT             shift, and go to state 3
    IDENTIFIER        shift, and go to state 4
    MACRO_IDENTIFIER  shift, and go to state 5
    IDENTIFIER_LIST   shift, and go to state 6
    TOK_STRING        shift, and go to state 7
    TOK_CHAR          shift, and go to state 8
    TRUE              shift, and go to state 9
    FALSE             shift, and go to state 10
    TRIPLE_DOT        shift, and go to state 11
    LET               shift, and go to state 12
    FN                shift, and go to state 13
    MODULE            shift, and go to state 14
    MATCH             shift, and go to state 15
    TOK_VOID          shift, and go to state 16
    THUNK             shift, and go to state 17
    IMPORT            shift, and go to state 18
    OPEN              shift, and go to state 19
    TYPE              shift, and go to state 20
    FSTRING_START     shift, and go to state 21
    'yield'           shift, and go to state 22
    'for'             shift, and go to state 23
    '['               shift, and go to state 24
    '('               shift, and go to state 25
    'if'              shift, and go to state 26

    expr         go to state 40
    simple_expr  go to state 29
    let_binding  go to state 31
    lambda_expr  go to state 32
    list         go to state 33
    array        go to state 34
    tuple        go to state 35
    match_expr   go to state 36
    fstring      go to state 37
    type_decl    go to state 38


state 12

   72 let_binding: LET . TEST_ID '=' expr
   73            | LET . IDENTIFIER '=' expr
   74            | LET . IDENTIFIER '=' EXTERN FN fn_signature
   75            | LET . lambda_arg '=' expr
   76            | LET . MUT lambda_arg '=' expr
   77            | LET . expr_list '=' expr
   78            | LET . MUT expr_list '=' expr
   79            | LET . TOK_VOID '=' expr
   82            | LET . '(' IDENTIFIER ')' '=' lambda_expr
   83            | LET . '(' IDENTIFIER ')' '=' expr
   88            | LET . IDENTIFIER ':' IDENTIFIER '=' lambda_expr

    INTEGER           shift, and go to state 1
    DOUBLE            shift, and go to state 2
    FLOAT             shift, and go to state 3
    IDENTIFIER        shift, and go to state 41
    MACRO_IDENTIFIER  shift, and go to state 5
    IDENTIFIER_LIST   shift, and go to state 6
    TOK_STRING        shift, and go to state 7
    TOK_CHAR          shift, and go to state 8
    TRUE              shift, and go to state 9
    FALSE             shift, and go to state 10
    TRIPLE_DOT        shift, and go to state 11
    LET               shift, and go to state 12
    FN                shift, and go to state 13
    MODULE            shift, and go to state 14
    MATCH             shift, and go to state 15
    TOK_VOID          shift, and go to state 42
    THUNK             shift, and go to state 17
    IMPORT            shift, and go to state 18
    OPEN              shift, and go to state 19
    TYPE              shift, and go to state 20
    TEST_ID           shift, and go to state 43
    MUT               shift, and go to state 44
    FSTRING_START     shift, and go to state 21
    'yield'           shift, and go to state 22
    'for'             shift, and go to state 23
    '['               shift, and go to state 24
    '('               shift, and go to state 45
    'if'              shift, and go to state 26

    expr             go to state 46
    simple_expr      go to state 29
    let_binding      go to state 31
    lambda_expr      go to state 32
    lambda_arg       go to state 47
    list             go to state 33
    array            go to state 34
    list_match_expr  go to state 48
    tuple            go to state 35
    expr_list        go to state 49
    match_expr       go to state 36
    fstring          go to state 37
    type_decl        go to state 38


state 13

   89 lambda_expr: FN . lambda_args ARROW expr_sequence ';'
   90            | FN . TOK_VOID ARROW expr_sequence ';'

    IDENTIFIER  shift, and go to state 50
    TOK_VOID    shift, and go to state 51
    '('         shift, and go to state 52

    lambda_args      go to state 53
    lambda_arg       go to state 54
    list_match_expr  go to state 48


state 14

   93 lambda_expr: MODULE . lambda_args ARROW expr_sequence ';'
   94            | MODULE . expr_sequence ';'

    INTEGER           shift, and go to state 1
    DOUBLE            shift, and go to state 2
    FLOAT             shift, and go to state 3
    IDENTIFIER        shift, and go to state 55
    MACRO_IDENTIFIER  shift, and go to state 5
    IDENTIFIER_LIST   shift, and go to state 6
    TOK_STRING        shift, and go to state 7
    TOK_CHAR          shift, and go to state 8
    TRUE              shift, and go to state 9
    FALSE             shift, and go to state 10
    TRIPLE_DOT        shift, and go to state 11
    LET               shift, and go to state 12
    FN                shift, and go to state 13
    MODULE            shift, and go to state 14
    MATCH             shift, and go to state 15
    TOK_VOID          shift, and go to state 16
    THUNK             shift, and go to state 17
    IMPORT            shift, and go to state 18
    OPEN              shift, and go to state 19
    TYPE              shift, and go to state 20
    FSTRING_START     shift, and go to state 21
    'yield'           shift, and go to state 22
    'for'             shift, and go to state 23
    '['               shift, and go to state 24
    '('               shift, and go to state 56
    'if'              shift, and go to state 26

    expr             go to state 28
    simple_expr      go to state 29
    expr_sequence    go to state 57
    let_binding      go to state 31
    lambda_expr      go to state 32
    lambda_args      go to state 58
    lambda_arg       go to state 54
    list             go to state 33
    array            go to state 34
    list_match_expr  go to state 48
    tuple            go to state 35
    match_expr       go to state 36
    fstring          go to state 37
    type_decl        go to state 38


state 15

  119 match_expr: MATCH . expr WITH match_branches

    INTEGER           shift, and go to state 1
    DOUBLE            shift, and go to state 2
    FLOAT             shift, and go to state 3
    IDENTIFIER        shift, and go to state 4
    MACRO_IDENTIFIER  shift, and go to state 5
    IDENTIFIER_LIST   shift, and go to state 6
    TOK_STRING        shift, and go to state 7
    TOK_CHAR          shift, and go to state 8
    TRUE              shift, and go to state 9
    FALSE             shift, and go to state 10
    TRIPLE_DOT        shift, and go to state 11
    LET               shift, and go to state 12
    FN                shift, and go to state 13
    MODULE            shift, and go to state 14
    MATCH             shift, and go to state 15
    TOK_VOID          shift, and go to state 16
    THUNK             shift, and go to state 17
    IMPORT            shift, and go to state 18
    OPEN              shift, and go to state 19
    TYPE              shift, and go to state 20
    FSTRING_START     shift, and go to state 21
    'yield'           shift, and go to state 22
    'for'             shift, and go to state 23
    '['               shift, and go to state 24
    '('               shift, and go to state 25
    'if'              shift, and go to state 26

    expr         go to state 59
    simple_expr  go to state 29
    let_binding  go to state 31
    lambda_expr  go to state 32
    list         go to state 33
    array        go to state 34
    tuple        go to state 35
    match_expr   go to state 36
    fstring      go to state 37
    type_decl    go to state 38


state 16

   42 simple_expr: TOK_VOID .

    $default  reduce using rule 42 (simple_expr)


state 17

   28 expr: THUNK . expr

    INTEGER           shift, and go to state 1
    DOUBLE            shift, and go to state 2
    FLOAT             shift, and go to state 3
    IDENTIFIER        shift, and go to state 4
    MACRO_IDENTIFIER  shift, and go to state 5
    IDENTIFIER_LIST   shift, and go to state 6
    TOK_STRING        shift, and go to state 7
    TOK_CHAR          shift, and go to state 8
    TRUE              shift, and go to state 9
    FALSE             shift, and go to state 10
    TRIPLE_DOT        shift, and go to state 11
    LET               shift, and go to state 12
    FN                shift, and go to state 13
    MODULE            shift, and go to state 14
    MATCH             shift, and go to state 15
    TOK_VOID          shift, and go to state 16
    THUNK             shift, and go to state 17
    IMPORT            shift, and go to state 18
    OPEN              shift, and go to state 19
    TYPE              shift, and go to state 20
    FSTRING_START     shift, and go to state 21
    'yield'           shift, and go to state 22
    'for'             shift, and go to state 23
    '['               shift, and go to state 24
    '('               shift, and go to state 25
    'if'              shift, and go to state 26

    expr         go to state 60
    simple_expr  go to state 29
    let_binding  go to state 31
    lambda_expr  go to state 32
    list         go to state 33
    array        go to state 34
    tuple        go to state 35
    match_expr   go to state 36
    fstring      go to state 37
    type_decl    go to state 38


state 18

   84 let_binding: IMPORT . PATH_IDENTIFIER
   86            | IMPORT . IDENTIFIER

    IDENTIFIER       shift, and go to state 61
    PATH_IDENTIFIER  shift, and go to state 62


state 19

   85 let_binding: OPEN . PATH_IDENTIFIER
   87            | OPEN . IDENTIFIER

    IDENTIFIER       shift, and go to state 63
    PATH_IDENTIFIER  shift, and go to state 64


state 20

  132 type_decl: TYPE . IDENTIFIER '=' type_expr
  133          | TYPE . IDENTIFIER
  134          | TYPE . type_args '=' type_expr

    IDENTIFIER  shift, and go to state 65

    type_args  go to state 66


state 21

  127 fstring: FSTRING_START . fstring_parts FSTRING_END

    $default  reduce using rule 128 (fstring_parts)

    fstring_parts  go to state 67


state 22

    5 expr: 'yield' . expr

    INTEGER           shift, and go to state 1
    DOUBLE            shift, and go to state 2
    FLOAT             shift, and go to state 3
    IDENTIFIER        shift, and go to state 4
    MACRO_IDENTIFIER  shift, and go to state 5
    IDENTIFIER_LIST   shift, and go to state 6
    TOK_STRING        shift, and go to state 7
    TOK_CHAR          shift, and go to state 8
    TRUE              shift, and go to state 9
    FALSE             shift, and go to state 10
    TRIPLE_DOT        shift, and go to state 11
    LET               shift, and go to state 12
    FN                shift, and go to state 13
    MODULE            shift, and go to state 14
    MATCH             shift, and go to state 15
    TOK_VOID          shift, and go to state 16
    THUNK             shift, and go to state 17
    IMPORT            shift, and go to state 18
    OPEN              shift, and go to state 19
    TYPE              shift, and go to state 20
    FSTRING_START     shift, and go to state 21
    'yield'           shift, and go to state 22
    'for'             shift, and go to state 23
    '['               shift, and go to state 24
    '('               shift, and go to state 25
    'if'              shift, and go to state 26

    expr         go to state 68
    simple_expr  go to state 29
    let_binding  go to state 31
    lambda_expr  go to state 32
    list         go to state 33
    array        go to state 34
    tuple        go to state 35
    match_expr   go to state 36
    fstring      go to state 37
    type_decl    go to state 38


state 23

   32 expr: 'for' . IDENTIFIER '=' expr IN expr

    IDENTIFIER  shift, and go to state 69


state 24

  106 list: '[' . ']'
  107     | '[' . expr_list ']'
  108     | '[' . expr_list ',' ']'
  109 array: '[' . '|' '|' ']'
  110      | '[' . '|' expr_list '|' ']'
  111      | '[' . '|' expr_list ',' '|' ']'

    INTEGER           shift, and go to state 1
    DOUBLE            shift, and go to state 2
    FLOAT             shift, and go to state 3
    IDENTIFIER        shift, and go to state 4
    MACRO_IDENTIFIER  shift, and go to state 5
    IDENTIFIER_LIST   shift, and go to state 6
    TOK_STRING        shift, and go to state 7
    TOK_CHAR          shift, and go to state 8
    TRUE              shift, and go to state 9
    FALSE             shift, and go to state 10
    TRIPLE_DOT        shift, and go to state 11
    LET               shift, and go to state 12
    FN                shift, and go to state 13
    MODULE            shift, and go to state 14
    MATCH             shift, and go to state 15
    TOK_VOID          shift, and go to state 16
    THUNK             shift, and go to state 17
    IMPORT            shift, and go to state 18
    OPEN              shift, and go to state 19
    TYPE              shift, and go to state 20
    FSTRING_START     shift, and go to state 21
    '|'               shift, and go to state 70
    'yield'           shift, and go to state 22
    'for'             shift, and go to state 23
    '['               shift, and go to state 24
    ']'               shift, and go to state 71
    '('               shift, and go to state 25
    'if'              shift, and go to state 26

    expr         go to state 46
    simple_expr  go to state 29
    let_binding  go to state 31
    lambda_expr  go to state 32
    list         go to state 33
    array        go to state 34
    tuple        go to state 35
    expr_list    go to state 72
    match_expr   go to state 36
    fstring      go to state 37
    type_decl    go to state 38


state 25

   48 simple_expr: '(' . expr_sequence ')'
   49            | '(' . FN lambda_args ARROW expr_sequence ')'
   50            | '(' . FN TOK_VOID ARROW expr_sequence ')'
   51            | '(' . '+' ')'
   52            | '(' . '-' ')'
   53            | '(' . '*' ')'
   54            | '(' . '/' ')'
   55            | '(' . MODULO ')'
   56            | '(' . '<' ')'
   57            | '(' . '>' ')'
   58            | '(' . DOUBLE_AMP ')'
   59            | '(' . DOUBLE_PIPE ')'
   60            | '(' . GE ')'
   61            | '(' . LE ')'
   62            | '(' . NE ')'
   63            | '(' . EQ ')'
   64            | '(' . PIPE ')'
   65            | '(' . ':' ')'
   66            | '(' . DOUBLE_COLON ')'
   67            | '(' . custom_binop ')'
   91 lambda_expr: '(' . FN lambda_args ARROW expr_sequence ')'
   92            | '(' . FN TOK_VOID ARROW expr_sequence ')'
  114 tuple: '(' . expr ')'
  115      | '(' . expr_list ')'
  116      | '(' . expr_list ',' ')'

    INTEGER           shift, and go to state 1
    DOUBLE            shift, and go to state 2
    FLOAT             shift, and go to state 3
    IDENTIFIER        shift, and go to state 73
    MACRO_IDENTIFIER  shift, and go to state 5
    IDENTIFIER_LIST   shift, and go to state 6
    TOK_STRING        shift, and go to state 7
    TOK_CHAR          shift, and go to state 8
    TRUE              shift, and go to state 9
    FALSE             shift, and go to state 10
    PIPE              shift, and go to state 74
    TRIPLE_DOT        shift, and go to state 11
    LET               shift, and go to state 12
    FN                shift, and go to state 75
    MODULE            shift, and go to state 14
    MATCH             shift, and go to state 15
    DOUBLE_COLON      shift, and go to state 76
    TOK_VOID          shift, and go to state 16
    THUNK             shift, and go to state 17
    IMPORT            shift, and go to state 18
    OPEN              shift, and go to state 19
    TYPE              shift, and go to state 20
    FSTRING_START     shift, and go to state 21
    DOUBLE_PIPE       shift, and go to state 77
    DOUBLE_AMP        shift, and go to state 78
    '>'               shift, and go to state 79
    '<'               shift, and go to state 80
    NE                shift, and go to state 81
    EQ                shift, and go to state 82
    LE                shift, and go to state 83
    GE                shift, and go to state 84
    '+'               shift, and go to state 85
    '-'               shift, and go to state 86
    '*'               shift, and go to state 87
    '/'               shift, and go to state 88
    MODULO            shift, and go to state 89
    ':'               shift, and go to state 90
    'yield'           shift, and go to state 22
    'for'             shift, and go to state 23
    '['               shift, and go to state 24
    '('               shift, and go to state 25
    'if'              shift, and go to state 26

    expr           go to state 91
    simple_expr    go to state 29
    custom_binop   go to state 92
    expr_sequence  go to state 93
    let_binding    go to state 31
    lambda_expr    go to state 32
    list           go to state 33
    array          go to state 34
    tuple          go to state 35
    expr_list      go to state 94
    match_expr     go to state 36
    fstring        go to state 37
    type_decl      go to state 38


state 26
